[package]
name = "threedim"
version = "0.1.0"
authors = ["David Freifeld <freifeld.david@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
kiss3d = "0.29"
